[tool.poetry]
name = "sawayaka-analysis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
tslearn = "^0.5.1"
pandas = "1.2.0"
jupyter_nbextensions_configurator = "^0.4.1"
plotly = "^5.1.0"
bar-chart-race = "^0.1.0"
h5py = "^3.3.0"
statsmodels = "^0.12.2"
pystan = "^3.2.0"
seaborn = "^0.12.2"
matplotlib = "^3.6.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
